wdl-analysis/tests/validation/duplicate-call-inputs.errors
error: unknown task or workflow `a`
  ┌─ tests/validation/duplicate-call-inputs:6:10
  │
6 │     call a {
  │          ^

warning[UnusedCall]: unused call `a`
  ┌─ tests/validation/duplicate-call-inputs:6:10
  │
6 │     call a {
  │          ^

error: duplicate call input `x` in call statement
  ┌─ tests/validation/duplicate-call-inputs:9:13
  │
8 │             x = 1,
  │             - first call input with this name is here
9 │             x = 2
  │             ^ this call input is a duplicate

